added css for calculator

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div id="container">
     <div id="calculator">
       <form>
         <label>How much was your bill?<br>
