added google fonts

--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- Google fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Nanum+Pen+Script" rel="stylesheet"> <!-- Font used for header -->
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP" rel="stylesheet"><!-- Font used for calc container-->
+  <!-- External CSS -->
   <link rel="stylesheet" type='text/css' href="assets/css/style.css">
   <title>Tip Calculator</title>
 </head>
 
 <body>
   <div id="container">
+    <h1>Tip Calculator</h1>
     <div id="calculator">
       <form>
         <label>How much was your bill?<br>
