--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <select id="serviceQuality">
             <option disabled selected value='0'> --- Choose an option --- </option>
 
+            <option value="0.4">40$ - Hands Down Best Service!</option>
             <option value="0.3">30% - Outstanding</option>
             <option value="0.2">20% - Good</option>
             <option value="0.15">15% - It was okay</option>
